<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/Cabs_Logo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/FirstName"
        android:layout_below="@id/imageView2"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/FirstName"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/RegNatId"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FirstName"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/NationalID"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/RegNatId"
        android:layout_below="@+id/LastName"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/RegNatId"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/Regbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RegNatId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/primaryColor"
        android:text="@string/submit" />
</RelativeLayout>