<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:hint="@string/recoveryText"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="15"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/NatID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/NationalID"
        android:inputType="text"
        android:layout_below="@+id/Email"
        android:layout_alignStart="@+id/Email" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:background="@color/primaryLightColor"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NatID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/submit" />

</RelativeLayout>