<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Cabs_Logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pass"
        android:layout_below="@id/imageView"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/resetText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="15"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passCnfm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="15"
        android:hint="@string/cnfmPass"
        android:inputType="textPassword"
        android:layout_below="@+id/pass"
        android:layout_alignStart="@+id/pass" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:background="@color/primaryColor"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passCnfm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/reset" />

</RelativeLayout>