<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Cabs_Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/LoginID"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="218dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"
        app:layout_constraintVertical_bias="0.288" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="146dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginID"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/LoginBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/primaryLightColor"
        android:text="@string/Login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="203dp"
        android:layout_marginTop="41dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/ForgotPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:layout_marginTop="44dp"
        android:text="@string/ForgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register"
        app:layout_constraintVertical_bias="0.19" />

</android.support.constraint.ConstraintLayout>