<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.VeriFone675"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/vx675brown"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="16dp"
            app:expandedTitleMarginStart="1dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="VeriFone 675 Accessories">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/base"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/vx675base" />
                    <TextView
                        android:layout_width="wrap_content"
android:text="@string/vx675base"
                        android:fontFamily="sans-serif"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Info.Media"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"/>

                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:contentDescription="@string/charger"
                        android:src="@drawable/download" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Poscharger"
                        android:fontFamily="sans-serif"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Info.Media"
                        android:textSize="18sp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/carry_case"
                        android:layout_margin="8dp"
                        android:src="@drawable/vx675carriyingcase"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Info.Media"
                        android:textSize="18sp"
                        android:text="@string/casing"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/papperRoll"
                        android:src="@drawable/paper_rolls"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paper"
                        android:fontFamily="sans-serif"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Info.Media"
                        android:textSize="18sp"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/wifilogo"
                    android:src="@drawable/wifilogo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vx675_wifi_sim"
                    android:fontFamily="sans-serif"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Info.Media"
                    android:textSize="18sp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/simCard"
                        android:src="@drawable/images"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vx675_wifi_sim"
                        android:fontFamily="sans-serif"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Info.Media"
                        android:textSize="18sp"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>







</android.support.design.widget.CoordinatorLayout>